--- a/iframe.html
+++ b/iframe.html
@@ -14,13 +14,14 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 <script src="https://use.fortawesome.com/9441e4a6.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600" rel="stylesheet">
+<link href="..src/styles/index.css" rel="stylesheet"/>
 
         
       </head>
       <body>
         <div id="root"></div>
         <div id="error-display"></div>
-        <script src="static/preview.db3bdaaa177532a31954.bundle.js"></script>
+        <script src="static/preview.0bf4f202751d6a544f18.bundle.js"></script>
       </body>
     </html>
   
